src/styles/body.scss
$phone: 414px;
$tablet: 768px;
$desktop: 1200px;

#gatsby-focus-wrapper {
  border: 1 px solid white;
  margin: 0 auto;
  padding: 0;
}

.about-flex-container {
  display: flex;
  justify-content: space-between;
  margin: 20px 0 70px 0;
  @media screen and (max-width: $phone) {
    flex-direction: column;
  }

  .about {
    color: #cfc6c7;

    @media screen and (min-width: $tablet) {
      max-width: 420px;
    }
  }
}

.section-title {
  margin-top: 30px;
  color: #66fcf1;
  margin-bottom: 70px;
}

.projects-flex-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 70px;
  @media screen and (max-width: $tablet) {
    justify-content: center;
  }

  a {
    text-decoration: none;
  }

  p {
    max-width: 400px;
    color: #c5c6c7;
  }

  .project {
    height: 500px;
    margin-bottom: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .project-image {
      width: 300px;
      margin: 0 auto;
      height: 350px;
    }
  }

  .project-source {
    margin-bottom: 0;
  }

  .project-link {
    font-weight: 700;
    font-style: italic;
    color: #45a29e;
    &:hover {
      cursor: pointer;
      color: #66fcf1;
    }
  }

  .project-text-link {
    font-style: normal;
  }

  .view-project {
    margin-bottom: 80px;
  }

  .proj-1 {
    background-color: #1f2833;
    h3 {
      color: #45a29e;
    }
  }

  .proj-2 {
    background-color: #66fcf1;
    h3 {
      color: #1f2833;
    }
  }

  .proj-3 {
    background-color: #45a29e;
    h3 {
      color: #c5c6c7;
    }
  }

  .proj-4 {
    background-color: #c5c6c7;
    h3 {
      color: #1f2833;
    }
  }
}

